@@ -18,6 +18,8 @@ the input data.  Output file names are of the form:
 
 .nf
 "Net.Sta.Loc.Chan.Qual.YYYY-MM-DDTHHMMSS.FFFFFF.txt"
+or
+"Net.Sta.Loc.Chan.Qual.YYYY-MM-DDTHHMMSS.FFFFFF.csv"
 .fi
 
 .nf
